now we have bootstrap 5 plugin for this datatable

--- a/demo.html
+++ b/demo.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="utf-8">
     <title>TedirTables</title>
-    <link href="demo.css" rel="stylesheet">
+    <link href="default.css" rel="stylesheet">
+    <!-- CSS only -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
 </head>
 <body>
     <div class="container">
      <div class="row">
       <div class="col-md-12 loading">
-       <table class="dt-table">
+       <table class="table table-bordered table-striped">
         <thead>
          <tr>
           <th>Name</th>
@@ -629,11 +631,16 @@
     <script src="tedirtables-filterable.js"></script>
     <script src="tedirtables-editable.js"></script>
     <script src="tedirtables-exportable.js"></script>
+    <!-- JavaScript and dependencies -->
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js" integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>
+    <script src="tedirtables-bootstrap5.js"></script>
     <script>
         const extensions = [
             "editable",
             "exportable",
-            "filterable"
+            "filterable",
+            "bootstrap"
         ];
 
         const table = new TedirTable("table", {
@@ -644,7 +651,8 @@
 		        // 	"Search foo", "bar", "baz", "qux"
 		        // ]
 	        },
-	        plugins: extensions
+	        plugins: extensions,
+	        paginationTheme: bootstrapPagination
         });
     </script>
 </body>
