--- a/demo.html
+++ b/demo.html
@@ -631,6 +631,7 @@
     <script src="tedirtables-filterable.js"></script>
     <script src="tedirtables-editable.js"></script>
     <script src="tedirtables-exportable.js"></script>
+    <script src="tedirtables-checkable.js"></script>
     <!-- JavaScript and dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js" integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>
@@ -640,7 +641,8 @@
             "editable",
             "exportable",
             "filterable",
-            "bootstrap"
+            "bootstrap",
+            "checkable"
         ];
 
         const table = new TedirTable("table", {
